LapEventArgs class added.

--- a/Stopwatch/Stopwatch.Windows/Stopwatch.Windows.csproj
+++ b/Stopwatch/Stopwatch.Windows/Stopwatch.Windows.csproj
@@ -111,6 +111,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Model\LapEventArgs.cs" />
     <Compile Include="Model\StopwatchModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
