--- a/Stopwatch/Stopwatch.Windows/Stopwatch.Windows.csproj
+++ b/Stopwatch/Stopwatch.Windows/Stopwatch.Windows.csproj
@@ -104,8 +104,6 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
-    <Folder Include="ViewModel\" />
-    <Folder Include="View\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainPage.xaml.cs">
@@ -114,6 +112,10 @@
     <Compile Include="Model\LapEventArgs.cs" />
     <Compile Include="Model\StopwatchModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\StopwatchViewModel.cs" />
+    <Compile Include="View\BasicStopwatch.xaml.cs">
+      <DependentUpon>BasicStopwatch.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -131,6 +133,10 @@
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="View\BasicStopwatch.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
