--- a/Stopwatch/Stopwatch.Windows/Stopwatch.Windows.csproj
+++ b/Stopwatch/Stopwatch.Windows/Stopwatch.Windows.csproj
@@ -116,10 +116,14 @@
     <Compile Include="Model\LapEventArgs.cs" />
     <Compile Include="Model\StopwatchModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\AngleConverter.cs" />
     <Compile Include="ViewModel\BooleanNotConverter.cs" />
     <Compile Include="ViewModel\BooleanVisibilityConverter.cs" />
     <Compile Include="ViewModel\StopwatchViewModel.cs" />
     <Compile Include="ViewModel\TimeNumberFormatConverter.cs" />
+    <Compile Include="View\AnalogStopwatch.xaml.cs">
+      <DependentUpon>AnalogStopwatch.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\BasicStopwatch.xaml.cs">
       <DependentUpon>BasicStopwatch.xaml</DependentUpon>
     </Compile>
@@ -141,9 +145,18 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="View\AnalogStopwatch.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\BasicStopwatch.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\StopwatchStyles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Page>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
